--- a/proiect/assets/css/style.css
+++ b/proiect/assets/css/style.css
@@ -1286,6 +1286,142 @@ section {
   bottom: 15px;
 }
 
+
+/*--------------------------------------------------------------
+# Pricing Section
+--------------------------------------------------------------*/
+.pricing .section-title{
+  padding-bottom: 60px;
+}
+
+.pricing .pricing-item {
+  background-color: #fff;  
+  padding: 60px 40px;
+  box-shadow: 0 3px 20px -2px rgba(0, 0, 0, 0.5);
+  height: 100%;
+  position: relative;
+}
+
+.pricing .pricing-item h3 {
+  font-weight: 600;
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: #292922;
+}
+
+.pricing .pricing-item h4 {
+  font-size: 48px;
+  color: var(--mycolor);  
+  font-weight: 400;
+}
+
+.pricing .pricing-item h4 sup {
+  font-size: 28px;
+}
+
+.pricing .pricing-item h4 span {
+  color: #222222;
+  font-size: 18px;
+}
+
+.pricing ul {
+  padding: 20px 0;
+  list-style: none;
+  color: #222222;
+  text-align: left;
+  line-height: 20px;
+}
+
+.pricing ul li {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.pricing ul i {
+  color: rgba(89, 177, 89, 0.795); /* Icons*/
+  font-size: 24px;
+  padding-right: 3px;
+}
+
+.pricing ul .na {
+  color: #8a8888;
+}
+
+.pricing ul .na i {
+  color: rgba(161, 83, 83, 0.781);
+}
+
+.pricing ul .na span {
+  text-decoration: line-through;
+}
+
+.pricing .buy-btn {
+  color: #222222; 
+  background-color: #ffffff;  
+  display: inline-block;
+  padding: 8px 35px 10px 35px;
+  border-radius: 4px;
+  border: 2px solid var(--mycolor); 
+  font-size: 16px;
+  font-weight: 500;
+  transition: 0.3s;
+}
+
+.pricing .buy-btn:hover {
+  background: var(--mycolor); 
+  border-color: var(--mycolor);
+  color: #ffffff; 
+}
+
+.pricing .featured {
+  z-index: 10;
+}
+
+.pricing .featured .pricing-item {
+  background: var(--mycolor);
+}
+
+@media (min-width: 992px) {
+  .pricing .featured .pricing-item {
+    transform: scale(1.02, 1.1);
+  }
+}
+
+.pricing .featured h3,
+.pricing .featured h4,
+.pricing .featured h4 span,
+.pricing .featured ul,
+.pricing .featured ul .na,
+.pricing .featured ul i,
+.pricing .featured ul .na i {
+  color: var(--bs-body-bg); 
+}
+
+.pricing .featured .buy-btn {
+  background: #690B22; 
+  color: #ffffff;   
+  border-color: #ffffff; 
+}
+
+.pricing .featured .buy-btn:hover {
+  background: #ffffff;
+  border-color: #ffffff; 
+  color: #222222;
+}
+
+[data-theme="dark"] .pricing .featured .buy-btn {
+  background: #4A90E2; 
+  color: #ffffff;   
+  border-color: #ffffff; 
+}
+
+[data-theme="dark"] .pricing .featured .buy-btn:hover {
+  background: #ffffff; 
+  border-color: #ffffff; 
+  color: #222222;
+}
+
 /*--------------------------------------------------------------
   # Contact
   --------------------------------------------------------------*/
